# VariDock

./: .gitignore  LICENSE  README.md  TODO.md  index.html  pyproject.toml  requirements.txt  search.js  setup.py  varidock.html
.github/workflows/: workflow.yml
_build/: search.js
docking/: __init__.py  api.py  protocols.py
docking/deepsurf/: bsite_extraction.py  network.py  predict.py  protein.py  tfbio_data.py
docking/execution/: local.py  materialize.py  run.py  utils.py
docking/io/: __init__.py  af3_json.py  af3_load.py
docking/jobs/: __init__.py
docking/pipeline/: __init__.py  pipeline.py  types.py
docking/runners/: __init__.py  af3.py  base.py  boltz.py
docking/stages/: adfr_protein_receptor_prep.py  af3_single_protein_predictor.py  af3_structure.py  cif_to_pdb.py  deepsurf_pockets.py  insert_plddt_to_cif.py  meeko_ligand_prep.py  namd_eq2.py  namd_equil.py  namd_equil_prep.py  namd_prod.py  vina_dock.py  vmd_frame_extract.py
docking/structure/: base.py  msa.py  template.py
tests/: conftest.py  test_af3_json.py  test_boltz_yaml.py  test_jobs.py  test_jobs_fasta.py  test_local_executor.py  test_msa.py
tests/execution/: test_local_executor.py  test_namd.py
tests/fixtures/: a0a1i9lq74.cif
tests/io/: test_af3_json.py  test_af3_load.py  test_boltz_yaml.py
tests/runners/: test_af3_plan.py  test_jobs.py  test_jobs_fasta.py
tests/stages/: test_af3_single_protein_predictor.py  test_cif_to_pdb.py  test_vmd_equil_prep.py  test_vmd_frame_extraction.py
tests/structure/: test_msa.py
varidock/: __init__.py  cli.py  config.py  out_minimize_c2_p0.pdbqt  out_poses_c2_p0.pdbqt  plans.py
varidock/broker/: __init__.py
varidock/execution/: __init__.py  local.py  materialize.py  namd.py  run.py  slurm.py  validate.py
varidock/io/: __init__.py  af3_json.py  af3_load.py  boltz_yaml.py  fasta.py
varidock/jobs/: __init__.py  jobs.py
varidock/pipeline/: __init__.py  pipeline.py  stage.py  types.py
varidock/runners/: __init__.py  af3.py  (+2 more)
(+54 files in other folders)
