[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docking"
version = "0.1.0"
description = "Docking/structure prediction runners (AF3, Boltz, etc.)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Abdolla Hegazy", email = "hegazyab@msu.edu" }
]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "boltz>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["docking"]

[tool.pytest.ini_options]
testpaths = ["tests"]