[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "varidock"
dynamic = ["version"]
description = "Docker Automation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [{ name = "Abdolla Hegazy", email = "hegazyab@msu.edu" }]

dependencies = [
    "click",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
    "pdoc",
    "build",
    "pyyaml",
]

[tool.hatch.build.targets.wheel]
packages = ["varidock"]

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
varidock = "varidock.cli:cli"

[tool.ruff]